--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
           printf "> Python include path:\n    " && python -c "import distutils.sysconfig as sysconfig; print(sysconfig.get_python_inc())" && \
           printf "> Python libraries path:\n    " && python -c "import distutils.sysconfig as sysconfig; print(sysconfig.get_config_var('LIBDIR'))" && \
           printf "> Python interpreter executable:\n    " && python -c "import sys; print(sys.executable)" && \
-          printf "> Python version (sysconfig):\n    " && python -c "import distutils.sysconfig as sysconfig; print(sysconfig.get_python_version())"
+          printf "> Python version (platform):\n    " && python -c "import platform; print(platform.python_version())"
       - name: Cache multiple paths
         uses: actions/cache@v2
         with:
