--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,9 +61,14 @@ jobs:
       - name: Run poetry build
         shell: bash
         run: poetry build
+      - name: Run Alpine build
+        shell: bash
+        run: make alpine-build
       - name: Copy all prebuilt wheels
         shell: bash
         run: cp ./_build_and_release/* dist
+      - name: Copy Alpine wheels
+        run: cp ./alpine_dist/* dist
       - name: Publish a Python distribution to PyPI
         uses: pypa/gh-action-pypi-publish@master
         with:
